--- a/src/main/resources/zenit/console/ConsolePane.fxml
+++ b/src/main/resources/zenit/console/ConsolePane.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane id="rootNode" prefHeight="300.0" prefWidth="700.0" style="-fx-background-color: #333;" stylesheets="@consoleStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.zenit.console.ConsoleController">
    <children>
-      <AnchorPane fx:id="rootAnchor" layoutY="33.0" prefHeight="267.0" prefWidth="700.0" style="-fx-background-color:#333" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
+      <AnchorPane fx:id="rootAnchor" layoutY="33.0" prefHeight="267.0" prefWidth="700.0" style="-fx-background-color:#444" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
          <children>
             <Text layoutX="291.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nothing to display." textAlignment="CENTER" AnchorPane.topAnchor="30.0">
                <font>
@@ -48,7 +48,14 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Button id="btn" fx:id="btnClear" layoutX="500.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#clearConsole" stylesheets="@consoleStyle.css" text="CLEAR" textFill="#666666" AnchorPane.rightAnchor="158.4">
+            <Button id="btn" fx:id="btnClearConsole" layoutX="500.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#clearConsole" stylesheets="@consoleStyle.css" text="CLEAR" textFill="#666666" AnchorPane.rightAnchor="158.4">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+             <Button id="btn" fx:id="btnClearTerminal" layoutX="500.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#clearTerminal" stylesheets="@consoleStyle.css" text="CLEAR" textFill="#666666" AnchorPane.rightAnchor="158.4">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
